[gd_scene load_steps=8 format=3 uid="uid://dknh24q1qdxtn"]

[ext_resource type="LabelSettings" uid="uid://cr34ftfcx6o5w" path="res://OperationRoom/Assets/OperationLabel.tres" id="1_1a5ao"]
[ext_resource type="Script" path="res://OperationRoom/memory_button.gd" id="1_7sere"]
[ext_resource type="StyleBox" uid="uid://dye10cij8d0en" path="res://OperationRoom/Resources/memory_button_box.tres" id="3_pj36h"]
[ext_resource type="Theme" uid="uid://dcho8yr3orscl" path="res://Store/Assets/Store_theme.tres" id="4_8bv4w"]

[sub_resource type="Gradient" id="Gradient_dnqb7"]
offsets = PackedFloat32Array(0, 0.636364)
colors = PackedColorArray(1, 1, 0.0980392, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5emk6"]
gradient = SubResource("Gradient_dnqb7")
width = 150
height = 150
fill = 2
fill_from = Vector2(0.518349, 0.522936)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nyu8u"]
color = Color(1, 1, 1, 1)
thickness = 2

[node name="MemoryButton" type="TextureButton"]
offset_right = 150.0
offset_bottom = 150.0
tooltip_text = "A deep and happy brotherhood"
texture_normal = SubResource("GradientTexture2D_5emk6")
script = ExtResource("1_7sere")

[node name="MemoryLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Title"
label_settings = ExtResource("1_1a5ao")
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
text = "Price"
label_settings = ExtResource("1_1a5ao")
horizontal_alignment = 1

[node name="ContextualMenu" type="PanelContainer" parent="."]
visible = false
z_index = 10
custom_minimum_size = Vector2(385, 330)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -330.0
offset_right = 385.0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_styles/panel = ExtResource("3_pj36h")

[node name="MarginContainer" type="MarginContainer" parent="ContextualMenu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ContextualMenu/MarginContainer"]
layout_mode = 2

[node name="ContextTitleLabel" type="Label" parent="ContextualMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Title"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ContextualMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_nyu8u")

[node name="RichTextLabel" type="RichTextLabel" parent="ContextualMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
text = "This is a description
3 lines maximum
..."

[node name="HSeparator2" type="HSeparator" parent="ContextualMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_nyu8u")

[node name="KeepButton" type="Button" parent="ContextualMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_8bv4w")
text = "Send to memory bank"

[node name="InsertButton" type="Button" parent="ContextualMenu/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_8bv4w")
text = "Insert into [empty]"

[node name="SellButton" type="Button" parent="ContextualMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_8bv4w")
text = "Sell for $0"

[node name="EraseButton" type="Button" parent="ContextualMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_8bv4w")
text = "Erase"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_exited" from="ContextualMenu" to="." method="_on_contextual_menu_mouse_exited"]
